fix chain event tab overflow

--- a/packages/commonwealth/client/styles/pages/user_dashboard/user_dashboard_chain_event_row.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/user_dashboard_chain_event_row.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    word-break: break-word;
 
     .row-top-text {
       @include rowTopTextStyles;
